--- a/GHA Assaignment/index.html
+++ b/GHA Assaignment/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple & Beautiful Landing Page</title>
+    <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
